--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <header></header>
     <main>
       <div class="container">
-        <section class="list-title flex-spaced">
+        <section class="list-titleaa flex-spaced">
           <p class="title">Today's To Do</p>
           <i id="reset" class="ptr"></i>
         </section>
@@ -25,15 +25,15 @@
         <div class="list-container">
           <section class="lists">
             <div class="list">
-              <input type="checkbox" id="single-list" />
-              <label for="single-list">wash the dishes </label>
+              <input type="checkbox" id="single-list-1" />
+              <label for="single-list-1">wash the dishes </label>
             </div>
             <i id="selection" class="ptr"></i>
           </section>
           <section class="lists">
             <div class="list">
-              <input type="checkbox" id="single-list" />
-              <label for="single-list">complete To Do list project </label>
+              <input type="checkbox" id="single-list-2" />
+              <label for="single-list-2">complete To Do list project </label>
             </div>
             <i id="selection" class="ptr"></i>
           </section>
