--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
       href="https://fonts.googleapis.com/css2?family=Domine&family=Inter:wght@400;700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:wght@100&display=swap"
       rel="stylesheet"
     />
-    <script defer="defer" src="main.js"></script>
   </head>
   <body>
     <header></header>
@@ -19,7 +18,7 @@
           <i id="reset" class="ptr"></i>
         </section>
         <section class="addlist">
-          <input type="text" placeholder="Add to your list..." />
+          <input id="todo-input" type="text" placeholder="Add to your list..." />
           <i id="enter" class="ptr"></i>
         </section>
         <div class="list-container">
