implement clear all for completed todos

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         <div class="list-container">
         </div>
         <div class="clear-all flex-centered">
-          <p class="clear ptr">Clear all completed</p>
+          <p class="ptr">Clear all completed</p>
         </div>
       </div>
     </main>
